# sgserver/termsofservice.php
@@ -1,0 +1,12 @@
+<!DOCTYPE HTML><html><head><meta charset='UTF-8'><title>conditions d'utilisation</title></head><body>
+<h2>Conditions d'utilisation du serveur de cartes GéoTiff du Shom</h2>
+L'utilisation de ce serveur est réservée aux agents de l'Etat et de ses Etablissements publics à caractère Administratif (EPA)
+pour leurs missions de service public et un usage interne.
+L'utilisation est soumise aux conditions générales d’utilisation des produits numériques, services et prestations du Shom
+que vous trouverez en annexe 1
+du <a href='http://diffusion.shom.fr/media/wysiwyg/catalogues/repertoire_2017_web.pdf'>Répertoire des principaux documents
+dans lesquels figurent les informations publiques produites par le Shom disponible ici page 52</a>.
+En utilisant ce site ou l'une de ses API, vous acceptez ces conditions d'utilisation.</p>
+
+Ce site est expérimental propose différents mécanismes d'accès au contenu des cartes du Shom.</p>
+
